intro MemSegment