@@ -11,16 +11,9 @@
     <artifactId>nova-synchrobench</artifactId>
 
     <properties>
-        <!--
-			this property prevents the Nexus Staging Maven Plugin to
-			deploy this module's artifacts to Maven Central' staging repo
-		 -->
-        <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
-        <!--
-            this property prevents the Nexus Staging Maven Plugin to
-            deploy this module's artifacts to Maven Central' staging repo
-         -->
-        <skipStaging>true</skipStaging>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
          <dependency>
@@ -47,10 +40,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
+			    <configuration>
+			        <compilerArgs>
+			            <arg>--add-modules</arg>
+			            <arg>jdk.incubator.foreign</arg>
+			        </compilerArgs>
+			    </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
