@@ -8,7 +8,12 @@
 
     <artifactId>nova</artifactId>
     <packaging>jar</packaging>
-        
+
+  <properties>
+  <maven.compiler.source>17</maven.compiler.source>
+  <maven.compiler.target>17</maven.compiler.target>
+  </properties>
+
   <build>
     <sourceDirectory>source</sourceDirectory>
     <testSourceDirectory>tests</testSourceDirectory>
@@ -16,10 +21,6 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -35,7 +36,7 @@
             <configuration>
               <sources>
                 <source>benchmarks</source>
-                <source>OtherAprroaches</source>                
+                <source>OtherApproaches</source>
                 <source>MemBenchmark</source>                                
               </sources>
             </configuration>
@@ -46,7 +47,19 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.18.1</version>
+          <configuration>
+            <argLine>
+              --add-modules jdk.incubator.foreign
+              --add-opens jdk.incubator.foreign/jdk.internal.foreign=ALL-UNNAMED
+              --add-opens java.base/java.nio=ALL-UNNAMED
+              --enable-native-access=ALL-UNNAMED
+            </argLine>
+          </configuration>
         </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -55,13 +68,6 @@
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
 	    <version>4.13</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
-	<dependency>
-	    <groupId>org.mockito</groupId>
-	    <artifactId>mockito-all</artifactId>
-	    <version>1.10.19</version>
-	    <scope>test</scope>
 	</dependency>
 
 </dependencies>
